--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "awe-dnd": "^0.3.4",
     "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.2",
     "m-share": "^1.0.1",
